<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/infoMembre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/infoMembre" />

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="177dp"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/avatar" />

        <EditText
            android:id="@+id/et_nomComplet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/nomComplet"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_courriel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/et_nomComplet"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:hint="@string/et_courriel"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/et_courriel"
            android:layout_marginTop="140dp"
            android:ems="10"
            android:hint="@string/et_telephone"
            android:inputType="phone"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_motDePasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/infoMembre"
            android:layout_marginTop="220dp"
            android:ems="10"
            android:hint="@string/et_motDePasse"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_confirmerMotDePasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/et_motDePasse"
            android:layout_marginTop="275dp"
            android:ems="10"
            android:hint="@string/et_confirmerMotDePasse"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/chk_afficherMotDePasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="220dp"
            android:layout_toRightOf="@id/et_motDePasse"
            android:text="@string/chk_afficherMotDePasse" />

        <CheckBox
            android:id="@+id/chk_afficherConfirmerMotDePasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="275dp"
            android:layout_toRightOf="@id/et_confirmerMotDePasse"
            android:text="@string/chk_afficherConfirmerMotDePasse" />

        <CheckBox
            android:id="@+id/chk_infolettre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_confirmerMotDePasse"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="10dp"
            android:text="@string/chk_infolettre" />

        <Button
            android:id="@+id/btn_sauvegarder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chk_infolettre"
            android:layout_marginTop="15dp"
            android:enabled="true"
            android:text="@string/btn_sauvegarder" />

        <Button
            android:id="@+id/btn_quitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sauvegarder"
            android:layout_marginTop="5dp"
            android:enabled="true"
            android:text="@string/btn_quitter" />


    </RelativeLayout>
</LinearLayout>